# deadline-cloud-worker-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  THIRD-PARTY-LICENSES.txt  hatch.toml  hatch_version_hook.py  pyproject.toml  requirements-release.txt  requirements-research.txt  requirements-testing.txt
.github/workflows/: auto_approve.yml  code_quality.yml  e2e_test.yml  integ_test.yml  integration_test.yml  integration_tests.yml  mainline_e2e_canary.yml  mainline_e2e_test.yml  mainline_integration_test.yml  publish.yml  publish_release.yml  release.yml  release_bump.yml  release_e2e_canary.yml  release_integration_canary.yml  release_publish.yml  reuse_python_build.yml  windows_e2e_test.yml  windows_integration.yml
docs/: configuration.md  logging.md  state.md  telemetry.md  worker_api_contract.md  worker_api_protocol.md
docs/research/: download_slowdown_detection.ipynb  retries_backoff_jitter.ipynb
pipeline/: build.sh  canary.sh  e2e.sh  integ.sh
scripts/: add_queue_env.sh  assume_role_to_env.sh  create_service_resources.sh  delete_service_resources.sh  deploy_e2e_testing_infrastructure.sh  e2e_testing_infrastructure.yaml  enter_active_test_container.sh  get_e2e_test_ids_from_cfn.sh  queue-env.json  run_posix_docker.sh
scripts/submit_jobs/: usage.md
scripts/submit_jobs/asset_example/: template.json  template_uihint.yaml
scripts/submit_jobs/sleep/: sleep_job.json  submit_sleep.sh
src/deadline_worker_agent/: __init__.py  __main__.py  api_models.py  boto_mock.py  errors.py  file_system_operations.py  log_messages.py  metrics.py  progress.py  session_events.py  set_windows_permissions.py  utils.py  windows_credentials_resolver.py  worker.py
src/deadline_worker_agent/aws/deadline/: __init__.py
src/deadline_worker_agent/aws_credentials/: __init__.py  aws_configs.py  boto3_sessions.py  credentials_refresher.py  queue_boto3_session.py  temporary_credentials.py  worker_boto3_session.py
src/deadline_worker_agent/boto/: __init__.py  config.py  logger.py  retries.py  shim.py
src/deadline_worker_agent/installer/: __init__.py  install.ps1  install.sh  win_installer.py  worker.toml.example  worker.toml.windows.example
src/deadline_worker_agent/log_sync/: __init__.py  cloudwatch.py  loggers.py
src/deadline_worker_agent/scheduler/: __init__.py  log.py  scheduler.py  session_action_status.py  session_cleanup.py  session_queue.py
src/deadline_worker_agent/sessions/: __init__.py  errors.py  log_config.py  session.py
src/deadline_worker_agent/sessions/actions/: __init__.py  action_definition.py  enter_env.py  exit_env.py  ojio_action.py  openjd_action.py  run_step_task.py  sync_input_job_attachments.py
src/deadline_worker_agent/sessions/job_entities/: __init__.py  environment_details.py  job_attachment_details.py  job_details.py  job_entities.py  job_entity_type.py  step_details.py  validation.py
src/deadline_worker_agent/startup/: __init__.py  bootstrap.py  capabilities.py  cli_args.py  config.py  config_file.py  entrypoint.py  host_properties.py  settings.py
src/deadline_worker_agent/windows/: __init__.py  logon.py  win_api.py  win_credentials_resolver.py  win_logon.py  win_service.py
test/: conftest.py
test/e2e/: README.md  config-template.sh  conftest.py  test_credential_handling.py  test_installer.py  test_job_submissions.py  test_job_user.py  test_override_job_user.py  test_worker_status.py  utils.py
test/e2e/cross_os/: README.md  test_installer.py  test_job_submissions.py  test_worker_status.py  utils.py
test/e2e/job_attachment_bundle/files/: test_input_file
test/e2e/linux/: test_credential_handling.py  test_installer.py  test_job_submissions.py
test/e2e/linux/job_attachment_bundle/: template.json
test/e2e/windows/: test_job_submissions.py  test_override_job_user.py
test/integ/: config-template.sh  conftest.py  test_credential_handling.py  test_job_submissions.py
test/integ/installer/: test_windows_installer.py
test/unit/: conftest.py  test_copyright_header.py  test_file_system_operations.py  test_log_messages.py  test_main.py  test_metrics.py  test_progress.py  test_session_events.py  test_set_windows_permissions.py  test_windows_credentials_resolver.py  test_worker.py
test/unit/aws/deadline/: test_assume_fleet_role_for_worker.py  test_assume_queue_role_for_worker.py  test_batch_get_job_entity.py  test_client_telemetry.py  test_construct_worker_log_config.py  test_create_worker.py  test_delete_worker.py  test_update_worker.py  test_update_worker_schedule.py
test/unit/aws_credentials/: test_aws_configs.py  test_boto3_sessions.py  test_credentials_refresher.py  test_queue_boto3_session.py  test_temporary_credentials.py  test_worker_boto3_session.py
test/unit/boto/: test_config.py  test_logger.py  test_retries.py
test/unit/install/: conftest.py  test_install.py  test_windows_installer.py
test/unit/log_sync/: test_cloudwatch.py  test_loggers.py
test/unit/scheduler/: test_scheduler.py  test_session_cleanup.py  test_session_queue.py
test/unit/sessions/: test_job_attachment_details.py  test_job_entities.py  test_log_config.py  test_session.py
test/unit/sessions/actions/: test_ojio_action.py  test_openjd_action.py  test_sync_input_job_attachments.py
test/unit/sessions/job_entities/: test_environment_details.py  test_job_attachment_details.py  test_job_details.py  test_job_entities.py  test_step_details.py
test/unit/startup/: test_bootstrap.py  test_capabilities.py  test_cli_args.py  test_config.py  test_config_file.py  test_entrypoint.py  test_host_properties.py  test_settings.py
test/unit/windows/: test_win_credentials_resolver.py  test_win_logon.py  test_win_service.py
testing_containers/posix_ldap_multiuser/: Dockerfile  README.md  addUsersGroups.ldif  addUsersToSharedGroup.ldif  changePassword.ldif  run.sh  run_agent.sh  setup.sh  start_ldap.sh  term_agent.sh
testing_containers/posix_local_multiuser/: Dockerfile  run_agent.sh  term_agent.sh
testing_containers/posix_local_multiuser_jobRunAsUser/: Dockerfile  README.md  run_agent.sh
